make hover yellow background color different. fix CSS rule not applying on Firefox

--- a/assembl/static2/css/components/harvesting.scss
+++ b/assembl/static2/css/components/harvesting.scss
@@ -7,6 +7,10 @@
     .left-side-harvesting-button__label {
       visibility: visible;
     }
+
+    .left-side-harvesting-button__button__inside {
+      background-color: #ffed5b;
+    }
   }
 
   .left-side-harvesting-button__label {
@@ -33,7 +37,7 @@
       margin: 4px;
       width: calc(100% - 8px);
       height: calc(100% - 8px);
-      background: #fff7b5;
+      background-color: #fff7b5;
       border-radius: 50%;
       display: flex;
     }
